# web-scraper

./: .gitignore  DriverManager.py  README.md  ScrapedItem.py  Scraper.py  ScraperSetUp.py  Test.py  alembic.ini  config.py  data.csv  docker-compose.yml  fixJson.js  getData.js  getProductsData.js  glitch_links.txt  helper.py  main.py  package-lock.json  package.json  project.py  pyproject.toml  requirements.txt  test.py  test.txt  testdata.csv  web-scraper.py  web_scraper.py
Scrapers/: BaseScraper.py  BookScraper.py  CategoriesScraper.py  ProductScraper.py  ProductsScraper.py
analysis/: Untitled.ipynb  Untitled1.ipynb  data.csv  data_by_year.csv  load_data.ipynb  main_data.ipynb  new_data.csv  sneaker_data.csv  sneakers.csv  turn_to_csv.ipynb  up_to_2005.csv  visualize_data.ipynb
analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  data-checkpoint.csv  data_analysis-checkpoint.ipynb  load_data-checkpoint.ipynb  main_data-checkpoint.ipynb  maps-checkpoint.ipynb  visualize_data-checkpoint.ipynb  with_duplicates-checkpoint.csv
analysis/random/: items.json
databases/: bred.json  items.json
glitch/: config.py  folders.py  glitch_links.txt  project.py
migrations/: env.py
notes/: project structure
scrapers/: BaseScraper.py  GoodReadsScraper.py  ProductsScaper.py
shoes/: shoes.db  sneakers.db  sneakers_table.db
shoes/shoes/: database.py  notes  (+6 more)
sneakers/: scrapy.cfg
sneaks-api/: package.json
tests/: unit_tests.py
utils/: DriverManager.py  ScrapedItem.py  ScraperSetUp.py  config.py  db_connection.py  init_db.py  schemas.py
(+635 files in other folders)
